test/t35_namespace_const_keys.out
/workspaces/lazyscript/test/t35_namespace_const_keys.ls:4.16-19: syntax error, unexpected LSTSTR, expecting LSTSYMBOL
