test/t35_namespace_const_keys.ls
!{
  ~ns <- ((~prelude .nsnew0));
  ~~nsdefv ~ns .k 1;
  ~~nsdefv ~ns "s" 2;
};
